// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`descriptionTokenizer should break description for comments 1`] = `
{
  "endIdx": 4,
  "startIdx": 0,
  "type": "Description",
  "value": "Test",
}
`;

exports[`descriptionTokenizer should break description for comments 2`] = `
{
  "endIdx": 11,
  "startIdx": 0,
  "type": "Description",
  "value": "AnotherTest",
}
`;

exports[`descriptionTokenizer should tokenize to end of source 1`] = `
{
  "endIdx": 4,
  "startIdx": 0,
  "type": "Description",
  "value": "Test",
}
`;

exports[`descriptionTokenizer should tokenize to the next tag 1`] = `
{
  "endIdx": 4,
  "startIdx": 0,
  "type": "Description",
  "value": "Test",
}
`;

exports[`descriptionTokenizer should tokenize to the next whitespace 1`] = `
{
  "endIdx": 4,
  "startIdx": 0,
  "type": "Description",
  "value": "Test",
}
`;
